# asgard-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  agents.md  compose.yaml
.github/workflows/: ci.yml
benches/: api_bench.rs
migrations/: 0001_init.sql
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/db/: mod.rs  orders_repo.rs  products_repo.rs  users_repo.rs
src/adapters/web/: error.rs  mod.rs  router.rs
src/application/: mod.rs  ports.rs  services.rs
src/domain/: models.rs
src/infrastructure/: config.rs  db.rs  logging.rs  mod.rs
tests/: http_crud_postgres.rs
