[package]
name = "asgard-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "asgard-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6", features = ["macros", "json"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
dotenvy = "0.15"
async-trait = "0.1"
anyhow = "1.0"
url = "=2.4.1"
crc = "=3.0.1"
indexmap = "=2.2.6"

[dev-dependencies]
tower = "0.4"
hyper = "0.14"


